--- a/Beam_decode.ipynb
+++ b/Beam_decode.ipynb
@@ -83,17 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
     "def decode(y):\n",
-    "    '''\n",
+    "    '''Decodes with a simple rnn.\n",
     "    y: (N, t) array if not None.\n",
     "    '''\n",
     "    global N, V, H, h0, xh, hh, ho, GO_ID\n",
     "    \n",
-    "#     inputs = np.concatenate((np.ones_like(y[:, :1])*GO_ID, y), 1)[:, :-1] # shifted right\n",
     "    prev_hidden = np.zeros((y.shape[0], H)) # initial hidden\n",
     "    \n",
     "    for t in range(y.shape[1]):\n",
@@ -418,7 +417,6 @@
     "for t in range(T):  \n",
     "    def _get_preds_and_probs(PREDS):\n",
     "        probs = decode(y=PREDS) # (N, V)\n",
-    "#         print(\"probs:::\", probs)\n",
     "        preds_k = np.argsort(probs)[:, ::-1][:, :K].flatten() # (K*N,)\n",
     "        probs_k = np.sort(probs)[:, ::-1][:, :K].flatten() # (K*N,)\n",
     "        return preds_k, probs_k\n",
@@ -438,6 +436,7 @@
     "        PROBS_k = probs_k\n",
     "        EOS_k = preds_k==EOS_ID # \n",
     "        \n",
+    "        # logging\n",
     "        logging(PREDS_k, EOS_k, PROBS_k)\n",
     "                                                      \n",
     "    else:\n",
@@ -460,12 +459,11 @@
     "        normalized_probs = ( PROBS_kk*t + probs_kk ) / (t+1)\n",
     "        PROBS_kk = np.where(EOS_kk, PROBS_kk, normalized_probs) # (k*k*N, )\n",
     "        \n",
-    "        ## logging\n",
+    "        # logging\n",
     "        logging(PREDS_kk, EOS_kk, PROBS_kk)\n",
     "        \n",
     "        print(\"Pruning ...\")\n",
     "        winners = [] # (k*N). k elements are selected out of k^2\n",
-    "        eos = [] # after all, the length should be k*k*N of bool.\n",
     "        for j, prob_kk in enumerate(np.split(PROBS_kk, N)): # (k*k,) \n",
     "            if t == T-1: # final step\n",
     "                winner = np.argsort(prob_kk)[::-1][:1] # final 1 best\n",
