--- a/Beam_decode.ipynb
+++ b/Beam_decode.ipynb
@@ -484,15 +484,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Be aware that the tokens that follows the <EOS> are stripped."
+    "Be aware that the tokens that follows the `<EOS>` are stripped."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
