Deleted deprecated lines

--- a/Beam_decode.ipynb
+++ b/Beam_decode.ipynb
@@ -35,7 +35,6 @@
     "T = 10 # decoding timesteps\n",
     "initial_y = np.array([[3], [6]], dtype=np.int32)\n",
     "N = len(initial_y) # batch size\n",
-    "h0 = np.random.randn(N, H) # initial hidden state \n",
     "xh = np.random.randn(V, H) # weights from input to hidden\n",
     "hh = np.random.randn(H, H) # weights from hidden to hidden\n",
     "ho = np.random.randn(H, V) # weights from hidden to outputs\n",
@@ -91,7 +90,7 @@
     "    '''Decodes with a simple rnn.\n",
     "    y: (N, t) array if not None.\n",
     "    '''\n",
-    "    global N, V, H, h0, xh, hh, ho, GO_ID\n",
+    "    global N, V, H, xh, hh, ho\n",
     "    \n",
     "    prev_hidden = np.zeros((y.shape[0], H)) # initial hidden\n",
     "    \n",
