--- a/Dropout_in_a_minute.ipynb
+++ b/Dropout_in_a_minute.ipynb
@@ -147,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"no-dropout.png\" width=500. align=\"left\">"
+    "<img src=\"no-dropout.png\" width=\"500\" align=\"left\">"
    ]
   },
   {
@@ -205,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"dropout.png\" width=500. align=\"left\">"
+    "<img src=\"dropout.png\" width=\"500\" align=\"left\">"
    ]
   },
   {
