--- a/Subword Segmentation Techniques.ipynb
+++ b/Subword Segmentation Techniques.ipynb
@@ -1,19 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's compare various tokenizers, i.e., nltk, BPE, SentencePiece, and Bert tokenizer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "__author__ = \"kyubyong\"\n",
+    "__address__ = \"https://github.com/kyubyong/nlp_made_easy\"\n",
+    "__email__ = \"kbpark.linguist@gmail.com\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os, re"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's compare BPE, SentencePiece, and Bert (pretrained) tokenization."
    ]
   },
   {
@@ -1157,7 +1168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
