--- a/Data Augmentation for Quora Question Pairs.ipynb
+++ b/Data Augmentation for Quora Question Pairs.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,6 +94,7 @@
     "import torch.nn.functional as F\n",
     "import torch.utils.data as Data\n",
     "import torch.optim as optim\n",
+    "from torch.nn.utils.rnn import pack_padded_sequence\n",
     "from sklearn.metrics import f1_score, accuracy_score\n",
     "import random\n",
     "import copy\n",
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -228,16 +229,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "107038"
+       "107030"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,16 +266,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "30433"
+       "30429"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -401,12 +402,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The train0, non-duplicat sentence pairs, is augmented by matching a sentence with a random sentence."
+    "The train0, non-duplicate sentence pairs, is augmented by matching a sentence with a random sentence."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,16 +614,21 @@
     "        \n",
     "        self.embed = nn.Embedding(vocab_size, embedding_dim, padding_idx=0)\n",
     "        self.lstm = nn.LSTM(embedding_dim, hidden_dim, batch_first=True, bidirectional=True)\n",
-    "        self.dense = nn.Linear(hidden_dim, 2)\n",
+    "        self.dense = nn.Linear(hidden_dim*2, 2)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = x.to('cuda')\n",
-    "        x = self.embed(x)  \n",
+    "        seqlens = (x!=0).long().sum(1) # (N,)\n",
     "        \n",
-    "        outputs, (h, c) = self.lstm(x) # (maxlen, batch, hidden_dim)\n",
-    "        last_hidden_states = h[-1]\n",
+    "        x = self.embed(x) \n",
     "        \n",
-    "        logits = self.dense(last_hidden_states)\n",
+    "        packed_input = pack_padded_sequence(x, seqlens, batch_first=True, enforce_sorted=False)\n",
+    "        \n",
+    "        _, (last_hidden, c) = self.lstm(packed_input) # last_hidden: (num_layers * num_directions, batch, hidden_size)\n",
+    "        last_hidden = last_hidden.permute(1, 2, 0) # to (batch, hidden, num_directions)\n",
+    "        last_hidden = last_hidden.contiguous().view(last_hidden.size()[0], -1) # to (batch, hidden*num_directions)\n",
+    "        \n",
+    "        logits = self.dense(last_hidden)\n",
     "        return logits\n"
    ]
   },
@@ -635,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -716,56 +722,46 @@
      "output_type": "stream",
      "text": [
       "global step = 1421\n",
-      "loss =0.440\n",
-      "F1_score: 0.668, acc.: 0.773\n",
+      "loss =0.418\n",
+      "F1_score: 0.675, acc.: 0.783\n",
       "\n",
       "global step = 2842\n",
-      "loss =0.392\n",
-      "F1_score: 0.688, acc.: 0.789\n",
+      "loss =0.316\n",
+      "F1_score: 0.729, acc.: 0.802\n",
       "\n",
       "global step = 4263\n",
-      "loss =0.327\n",
-      "F1_score: 0.728, acc.: 0.801\n",
+      "loss =0.197\n",
+      "F1_score: 0.740, acc.: 0.808\n",
       "\n",
       "global step = 5684\n",
-      "loss =0.272\n",
-      "F1_score: 0.729, acc.: 0.803\n",
+      "loss =0.163\n",
+      "F1_score: 0.746, acc.: 0.816\n",
       "\n",
       "global step = 7105\n",
-      "loss =0.147\n",
-      "F1_score: 0.737, acc.: 0.809\n",
+      "loss =0.088\n",
+      "F1_score: 0.744, acc.: 0.814\n",
       "\n",
       "global step = 8526\n",
-      "loss =0.120\n",
-      "F1_score: 0.742, acc.: 0.807\n",
+      "loss =0.068\n",
+      "F1_score: 0.745, acc.: 0.811\n",
       "\n",
       "global step = 9947\n",
-      "loss =0.067\n",
-      "F1_score: 0.740, acc.: 0.813\n",
+      "loss =0.110\n",
+      "F1_score: 0.746, acc.: 0.814\n",
       "\n",
       "global step = 11368\n",
-      "loss =0.087\n",
-      "F1_score: 0.738, acc.: 0.811\n",
+      "loss =0.068\n",
+      "F1_score: 0.748, acc.: 0.818\n",
       "\n",
       "global step = 12789\n",
-      "loss =0.051\n",
-      "F1_score: 0.738, acc.: 0.811\n",
+      "loss =0.016\n",
+      "F1_score: 0.746, acc.: 0.816\n",
       "\n",
       "global step = 14210\n",
-      "loss =0.077\n",
-      "F1_score: 0.742, acc.: 0.809\n",
+      "loss =0.043\n",
+      "F1_score: 0.745, acc.: 0.813\n",
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.0395, device='cuda:0', grad_fn=<NllLossBackward>)"
-      ]
-     },
-     "execution_count": 223,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -776,7 +772,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "△ The best F1 score is .742, and accuracy is .813."
+    "△ The best F1 score is .748, and accuracy is .818."
    ]
   },
   {
@@ -788,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -796,56 +792,46 @@
      "output_type": "stream",
      "text": [
       "global step = 1421\n",
-      "loss =0.090\n",
-      "F1_score: 0.746, acc.: 0.814\n",
+      "loss =0.298\n",
+      "F1_score: 0.699, acc.: 0.727\n",
       "\n",
       "global step = 2842\n",
-      "loss =0.052\n",
-      "F1_score: 0.747, acc.: 0.818\n",
+      "loss =0.193\n",
+      "F1_score: 0.730, acc.: 0.766\n",
       "\n",
       "global step = 4263\n",
-      "loss =0.075\n",
-      "F1_score: 0.749, acc.: 0.819\n",
+      "loss =0.134\n",
+      "F1_score: 0.735, acc.: 0.765\n",
       "\n",
       "global step = 5684\n",
-      "loss =0.072\n",
-      "F1_score: 0.750, acc.: 0.818\n",
+      "loss =0.122\n",
+      "F1_score: 0.745, acc.: 0.776\n",
       "\n",
       "global step = 7105\n",
-      "loss =0.052\n",
-      "F1_score: 0.751, acc.: 0.816\n",
+      "loss =0.110\n",
+      "F1_score: 0.760, acc.: 0.799\n",
       "\n",
       "global step = 8526\n",
-      "loss =0.049\n",
-      "F1_score: 0.752, acc.: 0.819\n",
+      "loss =0.120\n",
+      "F1_score: 0.764, acc.: 0.801\n",
       "\n",
       "global step = 9947\n",
-      "loss =0.045\n",
-      "F1_score: 0.752, acc.: 0.820\n",
+      "loss =0.081\n",
+      "F1_score: 0.766, acc.: 0.804\n",
       "\n",
       "global step = 11368\n",
-      "loss =0.065\n",
-      "F1_score: 0.754, acc.: 0.819\n",
+      "loss =0.086\n",
+      "F1_score: 0.770, acc.: 0.809\n",
       "\n",
       "global step = 12789\n",
-      "loss =0.034\n",
-      "F1_score: 0.754, acc.: 0.823\n",
+      "loss =0.053\n",
+      "F1_score: 0.776, acc.: 0.820\n",
       "\n",
       "global step = 14210\n",
-      "loss =0.021\n",
-      "F1_score: 0.747, acc.: 0.822\n",
+      "loss =0.080\n",
+      "F1_score: 0.775, acc.: 0.821\n",
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.0440, device='cuda:0', grad_fn=<NllLossBackward>)"
-      ]
-     },
-     "execution_count": 224,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -856,7 +842,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "△ The best F1 score is .754, and accuracy is .823."
+    "△ The best F1 score is .776, and accuracy is .820."
    ]
   },
   {
